--- a/html/matriculacion.html
+++ b/html/matriculacion.html
@@ -107,7 +107,7 @@
         <form action="/php/matriculacion.php" method="POST">
           <div class="form-field">
             <label for="name" class="field-title">Nombre completo</label><br />
-            <input type="text" id="name" name="name" autocomplete="off" required/><br />
+            <input type="text" id="name" name="name" autocomplete="off" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,96}" required/><br />
           </div>
 
           <div class="form-field">
@@ -117,17 +117,17 @@
 
           <div class="form-field">
             <label for="dni" class="field-title">D.N.I</label><br />
-            <input type="text" id="dni" name="dni" autocomplete="off" required/><br />
+            <input type="text" id="dni" name="dni" autocomplete="off" pattern="((([X-Z])|([LM])|[0-9]){1}([-]?)(([0-9]){7})([-]?)([A-Z]{1}))" minlength="9" maxlength="11"required/><br />
           </div>
 
           <div class="form-field">
             <label for="parent" class="field-title">Nombre del padre, madre o tutor/a legal</label><br />
-            <input type="text" id="parent" name="parent" autocomplete="off" /><br required/>
+            <input type="text" id="parent" name="parent" autocomplete="off" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,96}"/><br required/>
           </div>
 
           <div class="form-field">
             <label for="whatsapp" class="field-title">Teléfono (Whatsapp)</label><br />
-            <input type="text" id="whatsapp" name="whatsapp" autocomplete="off" required/><br />
+            <input type="text" id="whatsapp" name="whatsapp" autocomplete="off" pattern="(([+][3][4][ ]?)((([6]{1})([0-9]{2}))|(([7]{1})([1-4]{1})([0-9]{1})))([ ]?)((([0-9]{2})([ ]?)([0-9]{2})([ ]?)([0-9]{2}))|(([0-9]{3})([ ]?)([0-9]{3}))))" required/><br />
           </div>
 
           <div class="form-field">
@@ -140,7 +140,7 @@
 
           <div class="form-field">
             <label for="allergies" class="field-title">Alergias o enfermedades (indica cuál)</label><br />
-            <input type="text" id="allergies" name="allergies" autocomplete="off" /><br />
+            <input type="text" id="allergies" name="allergies" autocomplete="off" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,1000}"/><br />
           </div>
 
           <div class="form-field">
@@ -153,7 +153,7 @@
 
           <div class="form-field">
             <label for="payment" class="field-title">Adjuntar justificante de pago</label><br />
-            <input type="file" id="payment" name="payment" autocomplete="off" /><br />
+            <input type="file" id="payment" name="payment" autocomplete="off" accept="image/*" /><br />
           </div>
 
           <input type="submit" value="Enviar" />
