--- a/html/matriculacion.html
+++ b/html/matriculacion.html
@@ -116,8 +116,8 @@
           </div>
 
           <div class="form-field">
-            <label for="dni" class="field-title">D.N.I</label><br />
-            <input type="text" id="dni" name="dni" autocomplete="off" pattern="((([X-Z])|([LM])|[0-9]){1}([-]?)(([0-9]){7})([-]?)([A-Z]{1}))" minlength="9" maxlength="11"required/><br />
+            <label for="dni" class="field-title">DNI/NIE/NIF (Letras en mayúsculas, sin guiones)</label><br />
+            <input type="text" id="dni" name="dni" autocomplete="off" pattern="((([X-Z])|([LM])|[0-9]){1}(([0-9]){7})([A-Z]{1}))" minlength="9" maxlength="9"required/><br />
           </div>
 
           <div class="form-field">
@@ -127,14 +127,14 @@
 
           <div class="form-field">
             <label for="whatsapp" class="field-title">Teléfono (Whatsapp)</label><br />
-            <input type="text" id="whatsapp" name="whatsapp" autocomplete="off" pattern="(([+][3][4][ ]?)((([6]{1})([0-9]{2}))|(([7]{1})([1-4]{1})([0-9]{1})))([ ]?)((([0-9]{2})([ ]?)([0-9]{2})([ ]?)([0-9]{2}))|(([0-9]{3})([ ]?)([0-9]{3}))))" required/><br />
+            <input type="text" id="whatsapp" name="whatsapp" autocomplete="off" pattern="((([+][3][4][ ]?)?)((([6]{1})([0-9]{2}))|(([7]{1})([1-4]{1})([0-9]{1})))([ ]?)((([0-9]{2})([ ]?)([0-9]{2})([ ]?)([0-9]{2}))|(([0-9]{3})([ ]?)([0-9]{3}))))" required/><br />
           </div>
 
           <div class="form-field">
             <p class="field-title">Nivel de la gimnasta</p><br>
-            <input type="radio" id="escuela" name="level" autocomplete="off" required checked/>
+            <input type="radio" id="escuela" name="level" autocomplete="off" value="Escuela"required checked/>
             <label for="escuela">Escuela</label><br>
-            <input type="radio" id="federada" name="level" autocomplete="off" />
+            <input type="radio" id="federada" name="level" autocomplete="off" value="Federada" />
             <label for="federada">Federada</label><br>
           </div>
 
@@ -145,14 +145,14 @@
 
           <div class="form-field">
             <p class="field-title">Consentimiento a subir fotos en las redes sociales</p><br>
-            <input type="radio" id="si-consentimiento" name="consent" autocomplete="off" required checked/>
+            <input type="radio" id="si-consentimiento" name="consent" autocomplete="off" value="Si" required checked/>
             <label for="si-consentimiento">Si</label><br />
-            <input type="radio" id="no-consentimiento" name="consent" autocomplete="off" />
+            <input type="radio" id="no-consentimiento" name="consent" autocomplete="off" value="No" />
             <label for="no-consentimiento">No</label><br />
           </div>
 
           <div class="form-field">
-            <label for="payment" class="field-title">Adjuntar justificante de pago</label><br />
+            <label for="payment" class="field-title">Adjuntar justificante de pago (Ponerse en contacto para realizar el pago)</label><br />
             <input type="file" id="payment" name="payment" autocomplete="off" accept="image/*" /><br />
           </div>
 
