--- a/html/matriculacion.html
+++ b/html/matriculacion.html
@@ -116,8 +116,8 @@
           </div>
 
           <div class="form-field">
-            <label for="dni" class="field-title">DNI/NIE/NIF (Letras en mayúsculas, sin guiones)</label><br />
-            <input type="text" id="dni" name="dni" autocomplete="off" pattern="((([X-Z])|([LM])|[0-9]){1}(([0-9]){7})([A-Z]{1}))" minlength="9" maxlength="9"required/><br />
+            <label for="dni" class="field-title">DNI/NIE</label><br />
+            <input type="text" id="dni" name="dni" autocomplete="off" pattern="((([x-zX-Z])|([lmLM])|[0-9]){1}([ ]?)(([0-9]){7})([-]?)([a-zA-Z]{1}))" minlength="9" maxlength="11"required/><br />
           </div>
 
           <div class="form-field">
@@ -127,7 +127,8 @@
 
           <div class="form-field">
             <label for="whatsapp" class="field-title">Teléfono (Whatsapp)</label><br />
-            <input type="text" id="whatsapp" name="whatsapp" autocomplete="off" pattern="((([+][3][4][ ]?)?)((([6]{1})([0-9]{2}))|(([7]{1})([1-4]{1})([0-9]{1})))([ ]?)((([0-9]{2})([ ]?)([0-9]{2})([ ]?)([0-9]{2}))|(([0-9]{3})([ ]?)([0-9]{3}))))" required/><br />
+            <script src="/js/main.js"></script>
+            <input type="text" id="whatsapp" name="whatsapp" class="ibacor_fi" data-prefix="+34 " autocomplete="off" pattern="((([+][3][4][ ]))((([6]{1})([0-9]{2}))|(([7]{1})([1-4]{1})([0-9]{1})))([ ]?)((([0-9]{2})([ ]?)([0-9]{2})([ ]?)([0-9]{2}))|(([0-9]{3})([ ]?)([0-9]{3}))))" required/><br />
           </div>
 
           <div class="form-field">
