--- a/php/subir_imagen_ejemplo.html
+++ b/php/subir_imagen_ejemplo.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-  <form action="noticias.php" method="POST" enctype="multipart/form-data">
+  <form action="subir_imagen_ejemplo.php" method="POST" enctype="multipart/form-data">
     <label for="imagen_noticia">Imagen</label><br>
     <input type="file" name="imagen_noticia"><br><br>
     <input type="submit" value="Guardar" name="submit">
