--- a/html/contacto.html
+++ b/html/contacto.html
@@ -137,15 +137,19 @@
       </div>
       <h1>Mandanos un mensaje</h1>
       <div class="form-container">
-        <form action="#" method="POST">
+        <form action="/php/contacto.php" method="POST">
           <label for="name">Nombre</label>
-          <input type="text" id="name" name="name" /><br />
+          <input type="text" id="name" name="name" 
+          pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,96}"
+          required/><br />
           <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email" /><br />
+          <input type="email" id="email" name="email" 
+          pattern="([a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,})"
+          required/><br />
           <label for="subject">Asunto</label>
-          <input type="text" id="subject" name="subject" /><br />
+          <input type="text" id="subject" name="subject" required/><br />
           <label for="message">Mensaje</label>
-          <textarea id="message" name="message"></textarea><br />
+          <textarea id="message" name="message" required></textarea><br />
           <input type="submit" value="Enviar" />
         </form>
       </div>
