--- a/html/login.html
+++ b/html/login.html
@@ -38,7 +38,7 @@
                 type="text"
                 class="form-control"
                 placeholder="usuario"
-                name="username"
+                name="usuario"
               />
             </div>
             <div class="form-group" id="password-group">
@@ -46,7 +46,7 @@
                 type="password"
                 class="form-control"
                 placeholder="contraseña"
-                name="password"
+                name="contraseña"
               />
             </div>
             <div class="col-12 forgot" id="forgot-icon">
@@ -60,7 +60,7 @@
               >
             </div>
             <div class="form-group form-button text-right">
-              <button type="submit" class="btn btn-primary" name="btnContinuar">
+              <button type="submit" class="btn btn-primary" name="continuar">
                 <i class="fas fa-arrow-right"></i> Continuar
               </button>
             </div>
