--- a/html/login.html
+++ b/html/login.html
@@ -31,7 +31,7 @@
           <div class="col-12 user-img text-center">
             <img src="/assets/logo_ritmica.png" width="150px" height="150px" />
           </div>
-          <form action="/php/login.php" method="POST" class="formulario">
+          <form action="login.php" method="POST" class="formulario">
             <h1>Iniciar sesión</h1>
             <div class="form-group" id="user-group">
               <input
