--- a/html/login.html
+++ b/html/login.html
@@ -31,7 +31,7 @@
           <div class="col-12 user-img text-center">
             <img src="/assets/logo_ritmica.png" width="150px" height="150px" />
           </div>
-          <form action="login.php" method="POST" class="formulario">
+          <form action="/php/login.php" method="POST" class="formulario">
             <h1>Iniciar sesión</h1>
             <div class="form-group" id="user-group">
               <input
@@ -49,6 +49,7 @@
                 name="contraseña"
               />
             </div>
+            <!-- <div class="alert"><?php echo isset($alert) ? $alert : ''; ?></div> -->
             <div class="col-12 forgot" id="forgot-icon">
               <a href="#"
                 ><i class="fas fa-caret-right"></i>¿Olvidó su contraseña?</a
