--- a/html/registrar_gimnasta.html
+++ b/html/registrar_gimnasta.html
@@ -88,48 +88,72 @@
   <!-- Content Start -->
   <div class="main">
     <div class="content-container">
-      <h1>Registrar nuevo gimnasta</h1>
+      <h1>Registrar nueva gimnasta</h1>
       <div class="form-container">
-        <form action="#" method="POST">
+        <form action="/php/registrar_gimnasta.php" method="POST">
           <div class="form-field">
             <label for="name" class="field-title">Nombre completo</label><br />
-            <input type="text" id="name" name="name" autocomplete="off" /><br />
+            <input type="text" id="name" name="name" autocomplete="off"
+              pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,96}"
+              required /><br />
           </div>
 
           <div class="form-field">
             <label for="birthdate" class="field-title">Fecha de nacimiento</label><br />
-            <input type="date" id="birthdate" name="birthdate" autocomplete="off" /><br />
+            <input type="date" id="birthdate" name="birthdate" autocomplete="off" required /><br />
           </div>
 
           <div class="form-field">
-            <p class="field-title">Grupo:</p><br>
-            <input type="radio" id="grupo-a" name="group" autocomplete="off" />
-            <label for="grupo-a">Grupo A</label><br />
-            <input type="radio" id="grupo-b" name="group" autocomplete="off" />
-            <label for="grupo-b">Grupo B</label><br />
-            <input type="radio" id="grupo-c" name="group" autocomplete="off" />
-            <label for="grupo-c">Grupo C</label><br />
+            <label for="dni" class="field-title">DNI/NIE</label><br />
+            <input type="text" id="dni" name="dni" autocomplete="off"
+              pattern="((([x-zX-Z])|([lmLM])|[0-9]){1}([ ]?)(([0-9]){7})([-]?)([a-zA-Z]{1}))" minlength="9"
+              maxlength="11" required /><br />
           </div>
 
           <div class="form-field">
-            <label for="email" class="field-title">Correo eléctronico</label><br />
-            <input type="email" id="email" name="email" autocomplete="off" /><br />
+            <label for="parent" class="field-title">Nombre del padre, madre o tutor/a legal</label><br />
+            <input type="text" id="parent" name="parent" autocomplete="off"
+              pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,96}" /><br
+              required />
           </div>
 
           <div class="form-field">
-            <label for="main-phone" class="field-title">Teléfono</label><br />
-            <input type="text" id="main-phone" name="main-phone" autocomplete="off" /><br />
+            <label for="whatsapp" class="field-title">Teléfono (Whatsapp)</label><br />
+            <script src="/js/main.js"></script>
+            <label id="tlf-prefijo">
+              <input type="text" id="whatsapp" name="whatsapp" class="ibacor_fi" data-prefix="" autocomplete="off"
+                pattern="(((([6]{1})([0-9]{2}))|(([7]{1})([1-4]{1})([0-9]{1})))([ ]?)((([0-9]{2})([ ]?)([0-9]{2})([ ]?)([0-9]{2}))|(([0-9]{3})([ ]?)([0-9]{3}))))"
+                required style="padding-left: 48px;" /><br />
+            </label>
           </div>
 
           <div class="form-field">
-            <label for="secondary-phone" class="field-title">Teléfono secundario</label><br />
-            <input type="text" id="secondary-phone" name="secondary-phone" autocomplete="off" /><br />
+            <p class="field-title">Nivel de la gimnasta</p><br>
+            <input type="radio" id="escuela" name="level" autocomplete="off" value="Escuela" required checked />
+            <label for="escuela">Escuela</label><br>
+            <input type="radio" id="federada" name="level" autocomplete="off" value="Federada" />
+            <label for="federada">Federada</label><br>
           </div>
 
           <div class="form-field">
-            <label for="dni" class="field-title">D.N.I</label><br />
-            <input type="text" id="dni" name="dni" autocomplete="off" /><br />
+            <label for="allergies" class="field-title">Alergias o enfermedades (indica cuál)</label><br />
+            <input type="text" id="allergies" name="allergies" autocomplete="off"
+              pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,1000}" /><br />
           </div>
+
+          <div class="form-field">
+            <p class="field-title">Consentimiento a subir fotos en las redes sociales</p><br>
+            <input type="radio" id="si-consentimiento" name="consent" autocomplete="off" value="Si" required checked />
+            <label for="si-consentimiento">Si</label><br />
+            <input type="radio" id="no-consentimiento" name="consent" autocomplete="off" value="No" />
+            <label for="no-consentimiento">No</label><br />
+          </div>
+
+          <div class="form-field">
+            <label for="payment" class="field-title">Adjuntar justificante de pago</label><br />
+            <input type="file" id="payment" name="payment" autocomplete="off" accept="image/*" /><br />
+          </div>
+
           <input type="submit" value="Enviar" />
       </div>
       </form>
