--- a/html/registrar_entrenador.html
+++ b/html/registrar_entrenador.html
@@ -92,14 +92,14 @@
       <div class="form-container">
         <form action="/php/registrar_entrenador.php" method="POST">
           <div class="form-field">
-            <label for="email">Correo electrónico</label>
+            <label for="email" class="field-title">Correo electronico</label><br />
             <input type="email" id="email" name="email" 
             pattern="([a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,})"
             required/><br />
           </div>
 
           <div class="form-field">
-            <label for="password">Contraseña</label>
+            <label for="password" class="field-title">Contraseña</label><br />
             <input type="text" id="password" name="password" 
             pattern="([a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,})"
             required/><br />
