--- a/html/anadir_imagenes.html
+++ b/html/anadir_imagenes.html
@@ -91,11 +91,11 @@
     <div class="content-container">
       <h1>Añadir una imágen</h1>
       <div class="form-container">
-        <form action="#" method="POST">
+        <form action="/php/anadir_imagenes.php" method="POST">
 
           <div class="form-field">
             <label for="trophy-image" class="field-title">Imagen</label><br />
-            <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" /><br />
+            <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" required/><br />
           </div>
 
           <input type="submit" value="Enviar" />
