--- a/html/anadir_logros.html
+++ b/html/anadir_logros.html
@@ -91,16 +91,16 @@
     <div class="content-container">
       <h1>Añadir un trofeo</h1>
       <div class="form-container">
-        <form action="#" method="POST">
+        <form action="/php/" method="POST">
 
           <div class="form-field">
             <label for="trophy-title" class="field-title">Titulo</label><br />
-            <input type="text" id="trophy-title" name="trophy-title" autocomplete="off" /><br />
+            <input type="text" id="trophy-title" name="trophy-title" autocomplete="off" required/><br />
           </div>
 
           <div class="form-field">
             <label for="trophy-image" class="field-title">Imagen</label><br />
-            <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" /><br />
+            <input type="file" id="trophy-image" name="trophy-image" autocomplete="off" required/><br />
           </div>
 
           <label for="trophy-description" class="field-title">Descripción</label><br />
