--- a/html/entrenador_datos.html
+++ b/html/entrenador_datos.html
@@ -59,6 +59,9 @@
     <div class="menu-section">
       <a href="javascript:void(0)" class="menu-title">Perfil</a>
       <a href="/html/entrenador_datos.html" class="menu-text">Modificar datos personales</a>
+      <a href="/php/logout.php">
+        <img src="/assets/logout2.png" class="logout-img" />
+      </a>
     </div>
   </div>
   <!-- Side Menu End -->
