--- a/html/modificar_usuario.html
+++ b/html/modificar_usuario.html
@@ -78,6 +78,10 @@
       <a href="javascript:void(0)" class="menu-title">Palmarés</a>
       <a href="/html/anadir_logros.html" class="menu-text">Añadir logros del club</a>
       <a href="/html/modificar_logros.html" class="menu-text">Modificar o eliminar logros del club</a>
+      <a href="/php/logout.php">
+        <img src="/assets/logout2.png" class="logout-img" />
+      </a>
+    </div>
     </div>
 
   </div>
