--- a/html/login.html
+++ b/html/login.html
@@ -31,7 +31,7 @@
           <div class="col-12 user-img text-center">
             <img src="/assets/logo_ritmica.png" width="150px" height="150px" />
           </div>
-          <form action="/php/login.php" method="POST" class="formulario">
+          <form action="/php/login-in.php" method="POST" class="formulario">
             <h1>Iniciar sesión</h1>
             <div class="form-group" id="user-group">
               <input
@@ -55,10 +55,7 @@
                 ><i class="fas fa-caret-right"></i>¿Olvidó su contraseña?</a
               >
             </div>
-            <div class="col-12 help" id="help-icon">
-              <a href="#"
-                ><i class="fas fa-caret-right"></i>¿Necesitas ayuda?</a
-              >
+            
             </div>
             <div class="form-group form-button text-right">
               <button type="submit" class="btn btn-primary" name="continuar">
